# Rustey

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yaml  prek.toml  rustfmt.toml
.github/workflows/: workflow.yml
src/: component.rs  environment.rs  init.rs  main.rs  types.rs
src/components/: mod.rs
src/components/examples/: mod.rs
src/components/moderation/: commands.rs  constants.rs  mod.rs
src/components/todo/: config.rs  constants.rs  database.rs  mod.rs
src/core/: commands.rs  database.rs  events.rs  mod.rs
src/utils/: bot_info.rs  embeds.rs  mod.rs
