[package]
name = "RustDiscordBot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
surrealdb = { version = "3.0.5", features = ["kv-mem", "protocol-ws", "kv-surrealkv"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
